Add email templates and CSS for class availability and welcome notifications